--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,113 +1,84 @@
 name: CI/CD for Vite React App
 
-# Controls when the workflow will run
 on:
   push:
     branches: ["main"]
   pull_request:
     branches: ["main"]
 
-# Sets permissions for the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
 env:
   VITE_APP_ID: ${{ secrets.VITE_APP_ID }}
+  NODE_VERSION: 20.x
 
 jobs:
-  # JOB 1: Test - Runs on every push and PR
   test:
     name: Run Tests and Build
     runs-on: ubuntu-latest
-    env:
-      VITE_APP_ID: ${{ secrets.VITE_APP_ID }}
 
     strategy:
       matrix:
-        node-version: [22.x]
+        node-version: [18.x, 20.x, 22.x] 
 
     steps:
-      # 1. Checkout the code from the repository
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2. Set up Node.js
       - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
 
-      # 3. Install dependencies
       - name: Install dependencies
         run: npm ci
 
-      # 4. Build the project for production (with env variable)
       - name: Build Project
         run: npm run build
-        env:
-          VITE_APP_ID: ${{ secrets.VITE_APP_ID }}
 
-      # 5. Upload the production build as an artifact
       - name: Upload production build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: production-build
+          name: production-build-${{ matrix.node-version }}
           path: dist/
 
-  # JOB 2: Deploy - Only runs on push to the main branch after test succeeds
   deploy:
     name: Deploy to GitHub Pages
     needs: test
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    env:
-      VITE_APP_ID: ${{ secrets.VITE_APP_ID }}
-
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
-      # 1. Checkout the code
       - name: Checkout
         uses: actions/checkout@v4
 
-      # 2. Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20.x"
+          node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
 
-      # 3. Install dependencies
       - name: Install dependencies
         run: npm ci
 
-      # 4. Build the project with the environment variable
       - name: Build
         run: npm run build
-        env:
-          VITE_APP_ID: ${{ secrets.VITE_APP_ID }}
 
-      # 5. Setup GitHub Pages
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
-      # 6. Upload the built files
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: "./dist"
 
-      # 7. Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
