--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,9 +11,12 @@ permissions:
   pages: write
   id-token: write
 
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 env:
   VITE_APP_ID: ${{ secrets.VITE_APP_ID }}
-  NODE_VERSION: 20.x
 
 jobs:
   test:
@@ -22,7 +25,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x] 
+        node-version: [22.x]
 
     steps:
       - name: Checkout code
